<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_news"
        android:title="@string/action_news"
        android:icon="@drawable/ic_news_black_24dp"
        android:orderInCategory="1" />
    <item
        android:id="@+id/action_history"
        android:title="@string/action_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:orderInCategory="2" />
    <item
        android:id="@+id/action_bookmark"
        android:title="@string/action_bookmark"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:orderInCategory="3" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:orderInCategory="4" />
</menu>
