<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space8"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_margin="@dimen/space8"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter" />
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space8"
            android:layout_gravity="center_horizontal"
            tools:text="@string/app_name"
            style="@style/Title.Full" />
        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space8"
            android:layout_gravity="center_horizontal"
            tools:text="Version 3.0.1234-abcdefg"
            style="@style/Subhead.Full" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space16"
            android:layout_margin="@dimen/space16" />
        <LinearLayout
            android:id="@+id/visit_container"
            style="@style/AboutContainer">
            <ImageView
                app:srcCompat="@drawable/ic_home_black_24dp"
                style="@style/AboutIcon" />
            <TextView
                android:id="@+id/action_visit"
                android:text="@string/about_visit"
                style="@style/AboutAction" />
        </LinearLayout>
        <View style="@style/AboutSeparator" />
        <LinearLayout
            android:id="@+id/rate_container"
            style="@style/AboutContainer">
            <ImageView
                app:srcCompat="@drawable/ic_thumb_up_black_24dp"
                style="@style/AboutIcon" />
            <TextView
                android:id="@+id/action_rate"
                android:text="@string/about_rate"
                style="@style/AboutAction" />
        </LinearLayout>
        <View style="@style/AboutSeparator" />
        <LinearLayout
            android:id="@+id/report_container"
            style="@style/AboutContainer">
            <ImageView
                app:srcCompat="@drawable/ic_bug_report_black_24dp"
                style="@style/AboutIcon" />
            <TextView
                android:id="@+id/action_report"
                android:text="@string/about_report"
                style="@style/AboutAction" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
